@@ -1,6 +1,7 @@
 Revision history for perl distribution Mojolicious-Plugin-PromiseActions
 
 0.09 Not Released
+- Plugin is deprecated for Mojolicious 8.28 and newer.
 
 0.08 2019-01-07T13:15:52+0100
 - Add more tests
